--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,8 @@ android {
 dependencies {
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-vector-icons')
+    apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
